--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,16 @@ android {
         viewBinding true
         dataBinding true
     }
+
+    // ✅ إضافات حل مشكلة تعارض JVM:
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    kotlinOptions {
+        jvmTarget = "17"
+    }
 }
 
 dependencies {
