--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,17 +5,16 @@ plugins {
 }
 
 android {
-    namespace 'com.pharmacy.manager'
+    namespace 'com.mohammedalbarodi.pharmacymanagerapp'
     compileSdk 34
 
     defaultConfig {
-        applicationId 'com.pharmacy.manager'
+        applicationId 'com.mohammedalbarodi.pharmacymanagerapp'
         minSdk 24
         targetSdk 34
         versionCode 1
         versionName "1.0"
 
-        // دعم اللغة العربية
         resConfigs "ar", "en"
     }
 
@@ -31,7 +30,6 @@ android {
         dataBinding true
     }
 
-    // ✅ إضافات حل مشكلة تعارض JVM:
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
@@ -48,15 +46,12 @@ dependencies {
     implementation "com.google.android.material:material:1.9.0"
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
 
-    // RecyclerView
     implementation "androidx.recyclerview:recyclerview:1.3.0"
 
-    // Room components
     implementation "androidx.room:room-runtime:2.5.2"
     kapt "androidx.room:room-compiler:2.5.2"
     implementation "androidx.room:room-ktx:2.5.2"
 
-    // Coroutine for Room
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
 }
 
