--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.pharmacy.manager">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:name=".PharmacyManagerApp"
@@ -10,7 +9,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PharmacyManagerApp">
 
-        <activity android:name=".ui.LoginActivity"
+        <activity
+            android:name=".ui.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,7 +18,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.MainActivity"
+        <activity
+            android:name=".ui.MainActivity"
             android:exported="false" />
     </application>
 
