--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x ./gradlew
 
+      - name: Clean project
+        run: ./gradlew clean
+
       - name: Build Debug APK
         run: ./gradlew assembleDebug --stacktrace --info
 
