--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation "com.google.android.material:material:1.9.0"
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
     implementation "androidx.recyclerview:recyclerview:1.3.0"
+    implementation "androidx.activity:activity-ktx:1.8.0"
 
     // دعم Room بإصدار محدث
     def room_version = "2.6.1"
